--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <script src="Analysis.js"></script>
 
-    <footer>フッター</footer>
+    <a href='https://github.com/walk-to-work/VRC_Log_Analyzer'>コードはこちら</a>
 </body>
 
 </html>
